kubernetes/apps/monitoring/runzero-explorer/app/runzero-explorer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runzero-explorer
  namespace: monitoring
  labels:
    app: runzero-explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: runzero-explorer
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        app: runzero-explorer
    spec:
      restartPolicy: Always
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: runzero-explorer
          image: ghcr.io/cowdogmoo/runzero-explorer:latest
          imagePullPolicy: Always
          command: ["/opt/runzero/bin/runzero-explorer.bin", "manual"]
          securityContext:
            runAsUser: 0
            privileged: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 1Gi
