kubernetes/apps/monitoring/runzero-explorer/app/runzero-explorer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    # External DNS Annotations
    external-dns.kubernetes.io/hostname: runzero-explorer.techvomit.xyz
  name: runzero-explorer
  namespace: monitoring
spec:
  ports:
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: runzero-explorer
